2004-08-17  Ian Zimmerman  <itz@californiadigital.com>

	* fish/extensions/sel.scm (sel-display-help): add --hex-dump
	option to usage messages.
	(sel-main): actually implement --hex-dump

	* fish/src/extension.c (install_new_procedures): 
	install ex_sel_*_{raw,hex}.

	* fish/src/scm-procedures.h: declare ex_sel_*_hex.

	* fish/src/scm-procedures.c (ex_sel_get_first_entry_hex): 
	new function.
	(ex_sel_get_next_entry_hex): new function.

2004-08-16  Ian Zimmerman  <itz@californiadigital.com>

	* fish/src/scm-procedures.c (ex_sel_get_next_entry_raw):
	Fix index out of bounds.

	* fish/src/scm-procedures.h: add prototypes for
	ex_sel_get_next_entry_raw and ex_sel_get_first_entry_raw.

	* fish/src/scm-procedures.c (ex_sel_get_next_entry_raw):
	new function.
	(ex_sel_get_first_entry_raw): new function.

2004-08-10  Ian Zimmerman  <itz@californiadigital.com>

	* fish/src/scm-procedures.c (ex_sel_display_first_entry):
	use SEL_RECORD_SIZE constant instead of hardcoding.
	(hex_dump_record_data): new function.
	
	* fish/src/ipmi-wrapper-sel.h: #define SEL_RECORD_SIZE

	* TODO: Add gh -> scm conversion task.

2004-08-16  A Balamurugan  <bala.a@californiadigital.com>

	* fish/extensions/bc-common.scm: code cleanups
	* fish/extensions/bc-section.scm: like wise
	* fish/scripts/bmc-config/bmc-config.in: now uses new bmc-config

2004-08-05  Ian Zimmerman  <itz@californiadigital.com>

	* configure.ac: Bump version for snapshot release.

2004-07-28  A Balamurugan  <bala.a@californiadigital.com>

	* fish/extensions/bc-common.scm: added new procedure (file-exists?)
	* fish/extensions/bc-section.scm: code cleanup and updated procedures
	* fish/extensions/bc2.scm: like wise

2004-07-26  Albert Chu  <chu11@llnl.gov>

	* bmc-watchdog/src/bmc-watchdog.c (_bmclog, _init_bmc_watchdog):
	Fixed --no-logging option.
	
2004-07-17  A Balamurugan  <bala.a@californiadigital.com>

	* fish/extensions/bc-common.scm: added primitives for checkout support