@@ -115,8 +115,8 @@ extern "C" {
 #define IPMI_CMD_GET_SENSOR_READING_FACTORS      0x23
 #define IPMI_CMD_SET_SENSOR_HYSTERESIS           0x24
 #define IPMI_CMD_GET_SENSOR_HYSTERESIS           0x25
-#define IPMI_CMD_SET_SENSOR_THRESHOLD            0x26
-#define IPMI_CMD_GET_SENSOR_THRESHOLD            0x27
+#define IPMI_CMD_SET_SENSOR_THRESHOLDS           0x26
+#define IPMI_CMD_GET_SENSOR_THRESHOLDS           0x27
 #define IPMI_CMD_SET_SENSOR_EVENT_ENABLE         0x28
 #define IPMI_CMD_GET_SENSOR_EVENT_ENABLE         0x29
 #define IPMI_CMD_RE_ARM_SENSOR_EVENTS            0x2A
